<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cocktail_app.apps.cocktailsfoodcreator.ui.cocktails.CocktailsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cocktails" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cocktail_app.apps.cocktailsfoodcreator.ui.food.FoodFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_searching"
        android:name="com.cocktail_app.apps.cocktailsfoodcreator.ui.recipeAddition.SearchingFragment"
        android:label="@string/searching_main_menu"
        tools:layout="@layout/fragment_searching" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.cocktail_app.apps.cocktailsfoodcreator.ui.profile.ProfileFragment"
        android:label="@string/profile_main_menu"
        tools:layout="@layout/fragment_profile" />
</navigation>