<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.CocktailInfoActivity">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingbar"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:toolbarId="@id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="CocktailsCreator">



            <ImageView
                android:id="@+id/image_cocktail_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/img_logo_whisky_app"
                android:transitionName="cocktailImage" />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:rotation="180"
                android:src="@drawable/shadow_effect"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/categoryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Category:"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:background="@drawable/rect_back"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_alignParentRight="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@+id/profileImage"
                        android:text="Name"
                        android:textColor="@color/blue"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center_vertical"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:src="@color/blue"
                        app:civ_border_color="@color/black"
                        app:civ_border_width="1dp"
                        android:layout_alignParentRight="true"
                        android:scaleType="centerCrop"
                        />

                </LinearLayout>



            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/backImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:tint="@color/white"
                        android:src="@drawable/baseline_arrow_back_ios_new_24"/>

                    <TextView
                        android:id="@+id/cocktailName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Title"
                        android:fontFamily="@font/playfair_display"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:textSize="24sp"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>




        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_info_activity"
                android:textSize="32sp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/textColor"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/ingredientsRecyclerView"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructions_info_activity"
                android:textSize="32sp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/textColor"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="16dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue"
                app:cardCornerRadius="0dp"
                android:elevation="8dp"
                >

                <TextView
                    android:id="@+id/instructionsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello!"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/textColor"
                    android:layout_margin="10dp"
                    />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textAllCaps="false"
                    android:text="@string/do_not_rec_info_activity"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    app:strokeWidth="1dp"
                    android:textAllCaps="false"
                    app:cornerRadius="0dp"
                    android:backgroundTint="@color/accentColor"
                    android:text="@string/Save_info_activity"
                    android:layout_weight="1"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:padding="7dp"
        android:visibility="gone"
        android:elevation="8dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/accentColor"
        android:layout_centerInParent="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>